syntax = "proto3";

package proto;

import  "protocol/common/def.proto";

service OrderManagement{
  rpc addOrder(Order) returns (common.String) ;
  rpc getOrder(common.String) returns (Order) ;
  rpc searchOrders(common.String) returns (stream Order) ;
  rpc updatedOrders(stream Order) returns (common.String) ;
  rpc processOrders(stream common.String) returns (stream CombinedShipment) ;
}

message Order {
  string id = 1;
  repeated string items = 2;
  string description = 3;
  float price = 4;
  string destination = 5;
}

message CombinedShipment {
  string id = 1;
  string status = 2;
  repeated Order orderList = 3;
}