syntax = "proto3";

package chat04;

message User {
  repeated sint32 Ids = 1;
}